card overflow solved

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,7 @@ address{
   position:absolute;
   top:20px;
   left:10px;
+  right:10px;
   font-size: 12pt;
   font-weight: 600;
   color:white;
@@ -222,7 +223,7 @@ justify-content:space-between;}
   height: 0;
   margin-top: 20px;
   padding-bottom: 80%;
-  overflow: scroll;
+  overflow: auto;
  
 }
 
@@ -231,7 +232,7 @@ justify-content:space-between;}
   text-align: left;
 }
 
-@media (max-width:574px) {
+@media (width:574px) {
   .about-container{
     height: 100%;
   }
@@ -242,8 +243,9 @@ justify-content:space-between;}
   }
 }
 
-@media (max-width:1050px) {
+@media (width:1200px) {
   .about-container{
-    height: 100%;
+    overflow-y: hidden; 
+    overflow-x: hidden; 
   }
 }
